@@ -3,12 +3,14 @@ package com.ICom.Icom.Service;
 import com.ICom.Icom.Model.User;
 import com.ICom.Icom.Repositories.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @RequiredArgsConstructor
 @Service
@@ -24,7 +26,7 @@ public class UserDetailService implements UserDetailsService {
          return new org.springframework.security.core.userdetails.User(
                  user.getUsername(),
                  user.getMotdepasse(),
-                 Collections.emptyList()
+                 List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
          );
         }
     }
